--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "clevis": "0.0.50",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-motion": "^0.5.2",
+    "react-scripts": "1.1.4",
+    "react-stack-grid": "^0.7.1",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "start": "react-scripts start",
