--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "clevis": "0.0.50",
     "react": "^16.4.1",
+    "react-blockies": "^1.3.0",
     "react-dom": "^16.4.1",
     "react-motion": "^0.5.2",
     "react-scripts": "1.1.4",
