--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web3": "^1.0.0-beta.34"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
